# tradleware-strategies

./: .gitignore  CHANGELOG.md  README.md
data/: README.md
pinescript/strategies/: ema-cross.pine  gaussian_channel.pine
python/: README.md  pyproject.toml  requirements.txt
python/notebooks/: README.md
python/src/: README.md  backtest.py  data.py  indicators.py
python/src/strategies/: ema_cross.py  gaussian_channel.py
results/ema-cross/: 2026-06-20_BTC-USDT_1d_since-2020-01-01.md  2026-06-20_ETH-USDT_1d_since-2020-01-01.md  2026-06-20_SOL-USDT_1d_since-2021-01-01.md  2026-06-20_SOL-USDT_1d_since-2022-01-01.md  2026-06-20_SPY_1d_since-2020-01-01.md
